----------
v2.0.6-git
----------

[mms] Additional fixes when creating new mailboxes (Bug #10282).


------
v2.0.5
------

[jan] Fix disabling of actions by locking preferences (Bug #10455).
[jan] Sort blacklist and whitelist for display instead of for storage.


------
v2.0.4
------

[mms] Fix creating new mailboxes (Bug #10282).


------
v2.0.3
------

[jan] Add -N parameter to mailbot calls by default (Request #10147).
[jan] Fix notice when using numeric comparisons for spam headers (Bug #10222).
[jan] Respect excluded mail addresses in Maildrop vacation driver (Request
      #10077).
[jan] Fix access to debug handler in Timsieved driver.
[jan] Fix deleting single conditions from a rule (Bug #10253).


------
v2.0.2
------

[jan] Fix moving rules to an explicit position (Bug #10172).
[mms] Fix storage backend conversion script.


------
v2.0.1
------

[mms] Fix folder selection (Bug #9907).
[mms] Fix filtering using the IMAP driver (Bug #9859).


----
v2.0
----

[jan] Fix application-specific permission checks (Bug #9786).
[jan] Correctly escape vacation subjects with quote characters in Maildrop
      driver (Bug #9156).
[jan] Catch all PEAR errors in Sieve driver.
[jan] Allow script drivers to provide additional scripts to upload (Bug #8110).
[jan] Change default Sieve port to 4190 (Request #9791).
[jan] Fix reading default forward rule from preferences.
[jan] Fix removing flags with Sieve driver (Vilius Sumskas <vilius@lnk.lt>,
      Bug #9785).
[mjr] Datatree share to SQL upgrade script refactored for Horde 4.


--------
v2.0-RC2
--------

[jan] Fix updating forward rules in SQL driver (Bug #9699).


--------
v2.0-RC1
--------

[jan] Update installation and upgrade instructions.
[jan] Fix instantiation of VFS transport driver (Bug #9605).
[jan] Fix moving rules with the SQL driver (Bug #9672).


----------
v2.0-BETA1
----------

[jan] Fix creating new rules with PostgreSQL (Bug #9638).


-----------
v2.0-ALPHA1
-----------
